--- a/ffar250_site/css/style.css
+++ b/ffar250_site/css/style.css
@@ -33,10 +33,21 @@ header h1 {
   font-weight: 900;
 }
 
-/* header h2 {
+h1 {
+  font-size: 5em;
+  display: flex;
+  justify-content: center;
+  padding: 1%;
+  margin: 1%;
+}
+
+h2 {
   font-size: 3em;
-  font-weight: bold;
-} */
+  display: flex;
+  justify-content: center;
+  padding: 1%;
+}
+
 /* mainHeader class */
 .mainHeader h1 {
   font-size: 4em;
@@ -67,8 +78,8 @@ header h1 {
 
 /* img */
 img {
-  width: 70%;
-  height: 70%;
+  width: 50%;
+  height: 50%;
 }
 
 /* All <nav> */
@@ -199,7 +210,7 @@ video.aboutVideo {
   background-color: rgba(0, 0, 0, 75%);
   border: 1px solid #b2ccf7;
   margin: 2% 10%;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
 }
 
@@ -210,5 +221,11 @@ video.aboutVideo {
 
 .prompt1Body {
   background: url("../images/Prompt1BG4.png");
+  background-size: 200%;
+}
+
+/* Prompt 2 */
+.prompt2Body {
+  background: url("../images/Prompt2BG.png");
   background-size: 200%;
 }
