--- a/ffar250_site/css/style.css
+++ b/ffar250_site/css/style.css
@@ -140,8 +140,8 @@ a:active {
   /* "Centers" text */
   display: flex;
   justify-content: center;
-  padding: 2%;
-  font-size: 5em;
+  padding: 2% 12%;
+  font-size: 6em;
 }
 
 /* About */
@@ -168,7 +168,7 @@ video.aboutVideo {
   background-color: rgba(0, 0, 0, 90%);
   border: 1px solid #b2ccf7;
   margin: 2% 11%;
-  font-size: 2em;
+  /* font-size: 2em; */
   line-height: 2;
 }
 
@@ -228,4 +228,38 @@ video.aboutVideo {
 .prompt2Body {
   background: url("../images/Prompt2BG.png");
   background-size: 200%;
+}
+
+/* Prompt 3 */
+.prompt3Figure {
+  display: flex;
+  justify-content: center;
+}
+
+.prompt3Figure img {
+  width: 40%;
+  height: 40%;
+}
+
+.yellowText {
+  color: yellow;
+}
+
+/* Code from CART 211 2020 Week 9 examples */
+/* Scrolling over the article contents reveals itself */
+.prompt3Article {
+  opacity: 0;
+   transform: translateY(2%);
+   transition: opacity .5s .5s ease-out,
+     transform 1s .5s ease-out;
+   will-change: transform, opacity;
+}
+
+.prompt3Article.is-visible {
+  opacity: 1;
+  transform: translateY(0%);
+}
+
+.extraPadding {
+  padding: 5em 0;
 }
