--- a/ffar250_site/css/style.css
+++ b/ffar250_site/css/style.css
@@ -206,12 +206,12 @@ video.aboutVideo {
 }
 
 .prompt1Description {
-  padding: 1%;
+  padding: 1% 3%;
   background-color: rgba(0, 0, 0, 75%);
   border: 1px solid #b2ccf7;
   margin: 2% 10%;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 14px;
+  line-height: 2;
 }
 
 .prompt1Figure {
@@ -227,7 +227,7 @@ video.aboutVideo {
 /* Prompt 2 */
 .prompt2Body {
   background: url("../images/Prompt2BG.png");
-  background-size: 200%;
+  background-size: 230%;
 }
 
 /* Prompt 3 */
@@ -261,5 +261,5 @@ video.aboutVideo {
 }
 
 .extraPadding {
-  padding: 5em 0;
+  padding: 2em 0;
 }
